overflow fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 	background-color: hsl(216, 12%, 8%);
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 ul,ol,li {
 list-style: none;
@@ -23,11 +25,11 @@ button {
 font-family: inherit;
 cursor: pointer;
 color: inherit;
+background-color: transparent;
 }
 img {
 vertical-align: top;
 }
-
 [class *= 'title'] {
 	font-size: 24px;
 	margin-bottom: 15px;
@@ -38,8 +40,8 @@ vertical-align: top;
 	line-height: 166%;
 }
 
+/* _____________________________________________________ */
 .flipper {
-	margin: auto;
 	perspective: 1000px;
 }
 .flipper.sent .card {
@@ -49,6 +51,7 @@ vertical-align: top;
 	position: relative;
 	width: 380px;
 	height: 380px;
+	margin: 0 15px;
 	background-color: hsl(213, 19%, 18%);
 	border-radius: 20px;
 	transition: transform 0.8s;
@@ -149,7 +152,7 @@ vertical-align: top;
 
 
 @media (max-width: 425px) { 
-	.block {
+	.card {
 		width: 280px;
 	}
 	.feedback__rating > * {
@@ -161,11 +164,10 @@ vertical-align: top;
 	}
 }
 
-
-
 .attribution {
 	font-size: 11px;
 	text-align: center;
+	padding: 20px;
 }
 .attribution a {
 	color: hsl(228, 100%, 87%);
